src/scss/partials/_chatlist.scss
.chats-container {
  position: relative;

  /* .scrollable {
    html.is-mac & {
      overflow-y: scroll;
    }
  } */

  .search-group-recent.search-group {
    @include respond-to(handhelds) {
      padding: 2px 0 0;
    }
  }

  .input-search {
    position: relative;
    width: 100%;
    //Vozmojno nado budet vernut margin-left: 22px;, tak kak eto vrode v levom bare tak po verstke, a v pravom bare dlya mobili nado 16, gde stiker seti 
    margin-left: 22px;
    margin-right: 4px;

    @include respond-to(handhelds) {
      margin-left: 16px;
    }

    input {
      --border-width: 1px;
      background-color: var(--color-gray-hover);
      height: 40px;
      border-radius: 22px;
      border: var(--border-width) solid transparent;
      box-sizing: border-box;
      padding: 0px calc(1.5rem - var(--border-width)) 0 calc(42px - var(--border-width));
      transition: background-color .15s ease-in-out, border-color .15s ease-in-out;
      width: 100%;
      font-size: 16px;

      &:hover {
        border-color: var(--color-gray);
      }

      &:focus {
        --border-width: 2px;
        background-color: transparent;
        border-color: $button-primary-background;

        & + .tgico {
          color: $button-primary-background;
          opacity: 1;
        }
      }
    }

    .tgico {
      position: absolute;
      left: 12px;
      top: 50%;
      transform: translateY(-50%);
      text-align: center;
      font-size: 24px;
      color: $color-gray;
      opacity: .6;
      transition: all .15s ease-out;

      &:before {
        vertical-align: middle;
      }
    }

    .tgico-close {
      left: auto;
      right: 0px;
    }

    //input.is-empty ~ .tgico-close {
    input:placeholder-shown ~ .tgico-close {
      display: none;
    }
  }

  ul {
    margin: 0;
    //padding: 0 .5rem;
    /* display: grid;
    grid-auto-columns: 1fr; */
    display: flex;
    flex-direction: column;
    /* grid-gap: 4px; */
    width: 100%;

    user-select: none;
    -webkit-user-select: none; /* disable selection/Copy of UIWebView */
    -webkit-touch-callout: none; /* disable the IOS popup when long-press on a link */

    /* html.is-mac & {
      transform: translateZ(0);
    } */
  }

  li {
    //padding: 0 0 2px 0;
    //padding-bottom: 4px;  - DO MAKETA JS3
    //overflow: hidden;
    background-color: #fff;

    @include respond-to(handhelds) {
      padding-bottom: 0px;
    }

    &.is-muted {
      .user-title {
        &:after {
          content: $tgico-nosound;
          color: #a3a3a3;
          font-size: 1.125rem;
          line-height: 27px;
          vertical-align: middle;
          margin-left: .125rem;
          display: inline-block;
          height: 29px;
          animation: fade-in-opacity .2s ease forwards;
        }
      }

      &.backwards .user-title:after {
        animation: fade-in-backwards-opacity .2s ease forwards;
      }
    }
  }

  li > .rp {
    height: 72px;
    max-height: 72px;
    border-radius: $border-radius-medium;
    //align-items: center;
    /* display: grid;
    grid-template-columns: 64px calc(100% - 64px - 6.5px); */
    display: flex;
    align-items: flex-start;
    flex-direction: row;
    position: relative;
    cursor: pointer;
    padding: 9px 8.5px;
    margin: 0 8px;
    overflow: hidden;

    html.is-safari & {
      margin-right: 3px;
    }

    @include respond-to(handhelds) {
      padding: 9px 12px 0 9px !important;
      border-radius: 0;
      margin: 0;
      overflow: hidden;
    }

    html.no-touch &:hover {
      background: var(--color-gray-hover);
    }
  }

  li.menu-open {
    > .rp {
      background: var(--color-gray-hover);
    }
  }

  @include respond-to(not-handhelds) {
    li.active > .rp {
      background: var(--color-gray-hover);
    }
  }

  .pinned-delimiter {
    display: flex;
    padding: 8px 0 4px;

    span {
      margin: 0;
      width: 100%;
      height: 1px;
      background-color: #DADCE0;
    }
  }

  p {
    margin: 0;
    display: flex;
    justify-content: space-between;
    flex-direction: row;
    //align-items: center;
    align-items: flex-start;
    //height: 1.7rem; // hot-fix
    height: 27px; // maybe new hot-fix
  }

  .dialog {
    &-title {
      &-details {
        /* font-size: .9rem; */
        //font-size: .8rem;
        font-size: .75rem;
        padding: 1px 0px 0px 0px;
        flex: 0 0 auto;
      }
    }
    
    &-subtitle {
      &-badge {
        font-size: .9rem;

        &.tgico-pinnedchat {
          width: 24px;
          font-size: 1.5rem;
        }

        &:not(:empty), &.tgico-pinnedchat {
          margin-left: .5rem;
        }
      }
    }
  }

  span {
    display: inline-block;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    vertical-align: middle;
    //margin: .1rem 0;
    line-height: 27px;
  }

  .dialog-avatar {
    flex: 0 0 auto;
  }

  .user-caption {
    max-width: 100%;
    max-height: 100%;
    overflow: hidden;
    color: $color-gray;
    flex: 1 1 auto;
    //padding: 1px 3.5px 1px 9px; - DO MAKETA JS3
    padding: 1px 8.5px 1px 9px; // JS3
    p:last-child {
      margin-top: -3px;
    }
  }

  .user-title {
    max-width: 82%;

    img.emoji {
      vertical-align: top;
      margin-top: 4px;
      width: 18px;
      height: 18px;
    }

    span.emoji {
      overflow: visible;
      margin: 0;
      width: auto;
      font-size: 14px;
      //vertical-align: unset;
      margin-top: -1.5px;
    }

    i.verified-icon {
      content: " ";
      background: url(assets/img/icon-verified.svg);
      display: inline-block;
      width: 20px;
      height: 20px;
      vertical-align: text-bottom;
      margin-left: .125rem;
    }
  }

  .user-last-message {
    img.emoji {
      width: 20px;
      height: 20px;
      margin-top: -3px;
    }

    span.emoji {
      font-size: 1.2rem;
      margin: 0 .125rem;
      overflow: visible;
      margin-top: -1.5px;
    }
  }

  .user-title, .user-last-message {
    i {
      font-style: normal;
      color: $color-blue;
    }
  }

  .message-status {
    margin-right: .1rem;
    //margin-top: .3rem;
    margin-top: -.3rem;

    &[class*=" tgico-"] {
      color: $color-green;
      font-size: 1.25rem;
    }

    &:before {
      vertical-align: middle;
    }
  }

  .unread, .tgico-pinnedchat {
    height: 24px;
    text-align: center;
    line-height: 24px;
    color: #fff;
    border-radius: 12px;
    margin-top: 4px;
    margin-right: -3px;
    flex: 0 0 auto;
  }

  .unread {
    min-width: 24px;
    padding: 0 7.75px; // ! fix initial width due to font-size: .9rem;
    font-weight: 500;
    transition: .2s background-color;
  }

  .unread:empty {
    visibility: hidden;
  }

  .unread, li.is-muted.backwards .unread {
    background: $color-green;
  }

  li.is-muted .unread, .tgico-pinnedchat {
    background: #c5c9cc;
  }

  .search-group {
    width: 100%;
    //border-bottom: 1px solid #DADCE0;
    padding: 1rem 0 .5rem;
    margin-bottom: .5rem;

    @include respond-to(handhelds) {
      margin-bottom: 0;
    }

    &__name {
      color: $color-gray;
      padding: 0 23px;
      padding-bottom: 1rem;
      font-weight: 500;
      user-select: none;

      @include respond-to(handhelds) {
        padding: 0 9px 0 16px;
        font-size: 15px;
      }
    }

    &-contacts {
      padding: 16px 0 7px;

      @include respond-to(handhelds) {
        padding: 7px 0 0px;
      }

      .search-group__name {
        padding-bottom: 17px;
        
        @include respond-to(handhelds) {
          padding-bottom: 0;
        }
      }
    }

    &:last-child {
      border-bottom: none;
    }
  }
}

// use together like class="chats-container contacts-container"
.contacts-container, .search-group-contacts {
  .dialog-avatar {
    width: 48px;
    height: 48px;
  }

  li {
    //margin-bottom: 2px;
    padding-bottom: 4px;
    padding-top: 2px;

    @include respond-to(handhelds) {
      padding: 0;
    }
  }

  li > .rp {
    padding: 9px 11.5px !important;
    height: 66px;

    //@include respond-to(handhelds) {
      //height: 62px;
    //}
  }

  .user-caption {
    padding: 1px 3.5px 1px 13px;

    @include respond-to(handhelds) {
      padding: 0px 4px 0px 14px;
    }
  }

  .user-title, b, .user-last-message b {
    font-weight: normal;
  }

  p {
    height: 24px;

    @include respond-to(handhelds) {
      height: 26px;
    }
  }

  span.user-last-message {
    font-size: 14px;
  }
}

#contacts-container {
  .sidebar-header {
    margin-bottom: 1px;
  }
  
  .input-search {
    margin-left: 16px;
  }
}

